<resources>
    <string name="app_name">Notes</string>
    <string name="search">Search</string>
    <string name="search_notes">Search notes</string>
    <string name="add_note">Add note</string>
    <string name="new_note">New note</string>
    <string name="edit_note">Edit note</string>
    <string name="untitled">Untitled</string>
    <string name="note_details">Note details</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="note_meta">Created: %1$s\nUpdated: %2$s</string>
</resources>
